moved SpecesProfileClass from gizmo_analysis to utilities.particle, to be more consistent with location of utility functions. as part of this, integrated DistancBinClass to within SpecesProfileClass, so do not have to pass it as input argument separately.
added more derived quantities to .prop(), in particular, ability to compute 3d/2d/1d distances and velocities wrt the host galaxy.

bug fixes and improved documentation throughout.

improved the jupyter tutorial to incorporate these changes.

--- a/gizmo_tutorial.ipynb
+++ b/gizmo_tutorial.ipynb
@@ -62,12 +62,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# alternately, read all particle species at z = 0\n",
     "\n",
     "part = gizmo.io.Read.read_snapshots('all', 'redshift', 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# this tutorial assumes that you are in the root directory of a simulation, \n",
+    "# but you can read a simulation at any location using input argument 'simulation_directory':\n",
+    "\n",
+    "part = gizmo.io.Read.read_snapshots('all', 'redshift', 0, simulation_directory='/arb/it/rary/loc/a/tion')"
    ]
   },
   {
@@ -114,7 +130,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# 3-D position of star particles (particle.number x dimension.number array) [Mpc comoving]\n",
@@ -125,7 +143,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# 3-D velocity of star particles (particle_number x dimension_number array) [km/s physical]\n",
@@ -203,7 +223,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# get individual elements by their index\n",
@@ -222,12 +244,13 @@
    "outputs": [],
    "source": [
     "# alternately use .prop() to compute derived quantities,\n",
-    "# including calling elements by their name\n",
+    "# including calling elements by their name or symbol\n",
     "# see gizmo.io.ParticleDictionaryClass for all options for derived quantities\n",
     "\n",
     "print(part['star'].prop('massfraction.metals'))\n",
     "print(part['star'].prop('massfraction.carbon'))\n",
-    "print(part['star'].prop('massfraction.iron'))"
+    "print(part['star'].prop('massfraction.iron'))\n",
+    "print(part['star'].prop('massfraction.fe'))  # can use name or symbol"
    ]
   },
   {
@@ -239,6 +262,7 @@
     "# also use .prop() to compute metallicity [Z/H]\n",
     "# for example, iron metallicity [Fe/H] :=\n",
     "#   log10((mass_iron / mass_hydrogen)_particle / (mass_iron / mass_hydrogen)_sun)\n",
+    "# my pipeline assumes solar abundances from Asplund et al 2009\n",
     "\n",
     "print(part['star'].prop('metallicity.total'))\n",
     "print(part['star'].prop('metallicity.fe'))"
@@ -261,7 +285,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# refer to ut.basic.constants for assumed solar values (and other constants)\n",
+    "# refer to ut.basic.constants for assumed solar values (Asplund et al 2009) and other constants\n",
     "\n",
     "ut.basic.constants.sun_composition"
    ]
@@ -276,7 +300,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# dictionary of useful information about the simulation\n",
@@ -287,7 +313,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# dictionary of information about this snapshot's index, scale-factor, redshift, time, lookback-time\n",
@@ -301,10 +329,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dictionary of arrays about *all* snapshots that were saved for the simulation\n",
+    "# dictionary class of arrays about *all* snapshots that were saved for the simulation\n",
     "\n",
     "print(part.Snapshot.keys())\n",
     "print(part.Snapshot['redshift'][:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dictionary class of cosmological parameters, with function for cosmological conversions\n",
+    "\n",
+    "part.Cosmology"
    ]
   },
   {
@@ -368,9 +407,20 @@
    "outputs": [],
    "source": [
     "# now can compute different types of distances of star particles from center of main galaxy\n",
-    "# this computes 3-D distance from main galaxy center along simulation's default x,y,z axes [kpc physical]\n",
+    "# compute 3-D distance from main galaxy center along simulation's default x,y,z axes [kpc physical]\n",
     "\n",
-    "ut.particle.get_distances_wrt_center(part, 'star', 'vector')"
+    "part['star'].prop('host.distance')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compute 1-D distance\n",
+    "\n",
+    "part['star'].prop('host.distance.1d')"
    ]
   },
   {
@@ -381,7 +431,7 @@
    "source": [
     "# compute 3-D distances along the principal (major, intermediate, minor) axes\n",
     "\n",
-    "ut.particle.get_distances_wrt_center(part, 'star', 'rotated')"
+    "part['star'].prop('host.distance.principal')"
    ]
   },
   {
@@ -390,11 +440,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# compute 2-D distances along the major axes (major + intermediate) and minor axis\n",
-    "# first value is distance (positive definite) [kpc physical] along the major axes\n",
-    "# second value is (signed) vertical height [kpc physical] wrt the disk\n",
+    "# compute 2-D distances along the major axes (major + intermediate) and minor axis [kpc physical]\n",
+    "# first value is along the major axes (positive definite)\n",
+    "# second value is vertical height wrt the disk (signed)\n",
     "\n",
-    "ut.particle.get_distances_wrt_center(part, 'star', 'rotated.2d')"
+    "part['star'].prop('host.distance.principal.2d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# same for velocity\n",
+    "# compute 3-D velocity from main galaxy center along simulation's default x,y,z axes [km / s]\n",
+    "\n",
+    "part['star'].prop('host.velocity')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compute 1-D velocity [km / s]\n",
+    "\n",
+    "part['star'].prop('host.velocity.1d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compute 3-D velocity along the principal (major, intermediate, minor) axes [km / s]\n",
+    "\n",
+    "part['star'].prop('host.velocity.principal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compute 2-D velocity along the major axes (major + intermediate) and minor axis\n",
+    "# first value is along the major axes (positive definite)\n",
+    "# second value is vertical velocity wrt the disk (signed)\n",
+    "\n",
+    "part['star'].prop('host.velocity.principal.2d')"
    ]
   },
   {
@@ -432,7 +529,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# say that you want to find out what they were doing at z = 1\n",
@@ -444,7 +543,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# use the function within gizmo_track.py to read star index pointers associated with the catalog z = 1\n",
@@ -455,7 +556,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# pointers are stored via numpy array appended to particle dictionary at the relevant snapshot\n",
@@ -480,7 +583,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# their positions at z = 0\n",
@@ -491,7 +596,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# get their indices in the catalog at z = 1\n",
@@ -503,7 +610,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# now you easily can get any property of interest at z = 1, for example, positions\n",
@@ -521,12 +630,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# use the function within gizmo_track.py to read this file and assign values directly to the catalog at z = 0\n",
     "\n",
     "gizmo.track.HostDistance.io_form_host_distance(part_at_z0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# alternately, read formation distances at the same time read snapshot itself\n",
+    "# (as with principal axes)\n",
+    "\n",
+    "part_at_z0 = gizmo.io.Read.read_snapshots(\n",
+    "    ['star'], 'redshift', 0, assign_principal_axes=True, assign_form_host_distance=True)"
    ]
   },
   {
@@ -562,12 +686,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for a disk galaxy, you may want to combine the major and intermediate axes into an absolute 'radius'\n",
-    "# this function is useful: it returns a 2-D array scalar (absolute) radius and (signed) vertical height within the disk\n",
+    "# 2-D array of scalar (absolute) distance and (signed) vertical height wrt the disk [kpc physical]\n",
+    "# this is a derived quantity, so need to call via .prop()\n",
     "\n",
-    "distances_2d = ut.coordinate.get_distances_major_minor(part_at_z0['star']['form.host.distance.3d'])\n",
-    "print(distances_2d[:, 0]) # absolute 2-D radius R\n",
-    "print(distances_2d[:, 1]) # signed vertical height Z"
+    "part_at_z0['star'].prop('form.host.distance.2d')"
    ]
   },
   {
@@ -581,10 +703,147 @@
     "# select particles formed at d = 0 - 8 kpc physical\n",
     "part_indices = ut.array.get_indices(part_at_z0['star']['form.host.distance'], [0, 8])\n",
     "\n",
-    "# get current position in the disk\n",
-    "distances_2d = ut.coordinate.get_distances_major_minor(part_at_z0['star']['form.host.distance.3d'][part_indices])\n",
-    "print(distances_2d[:, 0]) # absolute 2-D radius R\n",
-    "print(distances_2d[:, 1]) # signed vertical height Z"
+    "part_at_z0['star'].prop('form.host.distance.2d', part_indices)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# profile of property"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A common task is to compute a radial profile of a given quantity, such as mass density, average age, median metallicity, etc.\n",
+    "\n",
+    "The high-level functions below make this easier to do."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# first, initiate an instance of SpeciesProfileClass\n",
+    "# as you initialize,choose your distance/radius binning scheme: \n",
+    "#   'log' v 'linear', distance limits, bin width, number of spatial dimensions of profile\n",
+    "# refer to ut.binning.DistanceBinClass() for more\n",
+    "\n",
+    "# linear binning from 0 to 20 kpc with 1 kpc bin width, assuming a 3-D profile\n",
+    "SpeciesProfile = ut.particle.SpeciesProfileClass(scaling='linear', limits=[0, 20], width=1, dimension_number=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# using this binning scheme,\n",
+    "# compute sum/histogram/density of mass of star particles in each bin\n",
+    "# this returns a bunch of summed properties via a dictionary\n",
+    "\n",
+    "pro = SpeciesProfile.get_sum_profiles(part, 'star', 'mass')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# in principle, you can supply a list of multiple species, and it will compute profiles for each\n",
+    "# thus, it returns a dictionary for each species\n",
+    "\n",
+    "pro.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the quantities that it stores in each bin\n",
+    "\n",
+    "pro['star'].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# alternately, you may want to compute profiles along a disks R or Z axes\n",
+    "# if so, first define the dimensionality of the profile when you initiate the class\n",
+    "\n",
+    "# log binning from 0.1 to 10 kpc with 0.1 dex bin width, assuming a 2-D profile (along R)\n",
+    "SpeciesProfile = ut.particle.SpeciesProfileClass(scaling='log', limits=[0.1, 10], width=0.1, dimension_number=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set rotation = True to force it to compute profiles along the principal axes (assuming that you read them in)\n",
+    "# use other_axis_distance_limits to limit the extent along the other axis, \n",
+    "#   in this case, limit the Z axis to within +/- 1 kpc (in the profile, all distances are absolute)\n",
+    "\n",
+    "pro = SpeciesProfile.get_sum_profiles(part, 'star', 'mass', rotation=True, other_axis_distance_limits=[0, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# similarly, do this to compute profiles along Z\n",
+    "\n",
+    "# log binning from 0.1 to 10 kpc with 0.1 dex bin width, assuming a 1-D profile (along Z)\n",
+    "SpeciesProfile = ut.particle.SpeciesProfileClass(scaling='log', limits=[0.1, 10], width=0.1, dimension_number=1)\n",
+    "\n",
+    "# limit the R axex to [5, 8] kpc \n",
+    "pro = SpeciesProfile.get_sum_profiles(part, 'star', 'mass', rotation=True, other_axis_distance_limits=[5, 8])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# using the same binning scheme\n",
+    "# this function computes various statistics of a property of star particles in each bin\n",
+    "# by default, it weights the property by the mass of each particle\n",
+    "# this returns a bunch of statistics via a dictionary\n",
+    "\n",
+    "pro = SpeciesProfile.get_statistics_profiles(\n",
+    "    part, 'star', 'age', weight_by_mass=True, rotation=True, other_axis_distance_limits=[5, 8])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the quantities that it stores in each bin\n",
+    "\n",
+    "pro['star'].keys()"
    ]
   },
   {
@@ -614,7 +873,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
