changed behavior of computing distances aligned with principal axes. now can compute full cylindrical coordiantes, R, Z, and phi.
now access via:
part[species].prop('host.distance.scalar') for scalar distance
part[species].prop('host.distance.principal.cylindrical') for cylindrical coordinates

also changed naming convention in particle tracking when computing host distance at formation, to be more consistent with naming convention throughout code. now access via:
part['star']['form.host.distance']
which returns full 3-D vector (aligned with principal axes at formation).
now can compute scalar distance at formation via
part['star'].prop('form.host.distance.scalar')

--- a/gizmo_tutorial.ipynb
+++ b/gizmo_tutorial.ipynb
@@ -31,7 +31,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# you can access the files as named or use the aliases in __init__.py to keep it shorter \n",
@@ -51,7 +53,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# read star and dark matter particles at z = 0\n",
@@ -89,7 +93,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# each particle species is stored as its own dictionary\n",
@@ -101,7 +107,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# properties of star particles are stored as dictionary\n",
@@ -112,7 +120,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# properties of dark matter particles are stored as dictionary\n",
@@ -156,7 +166,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# mass of star particles [M_sun]\n",
@@ -167,7 +179,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# formation scale-factor of star particles\n",
@@ -178,7 +192,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# use .prop() to compute derived quantities,\n",
@@ -191,7 +207,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# similarly, get the age of a star particle (the lookback time to when it formed) [Gyr]\n",
@@ -209,7 +227,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# 'metallicities' are stored in the catalog as *mass fractions*\n",
@@ -240,7 +260,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# alternately use .prop() to compute derived quantities,\n",
@@ -256,7 +278,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# also use .prop() to compute metallicity [Z/H]\n",
@@ -271,7 +295,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# also use .prop() to compute simple arithmetic combinations, such as [Mg/Fe]\n",
@@ -282,7 +308,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# refer to ut.basic.constants for assumed solar values (Asplund et al 2009) and other constants\n",
@@ -326,7 +354,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# dictionary class of arrays about *all* snapshots that were saved for the simulation\n",
@@ -338,7 +368,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# dictionary class of cosmological parameters, with function for cosmological conversions\n",
@@ -349,7 +381,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# position [kpc comoving] and velocity [km/s physical] of the center of the host galaxy\n",
@@ -381,7 +415,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# can compute and assign principal axes (moment of inertia tensor) of stars during read in as below\n",
@@ -392,7 +428,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# moment of inertia tensor is stored similar to center_position\n",
@@ -403,7 +441,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# now can compute different types of distances of star particles from center of main galaxy\n",
@@ -415,21 +455,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# compute 1-D distance\n",
+    "# compute total scalar distance\n",
     "\n",
-    "part['star'].prop('host.distance.1d')"
+    "part['star'].prop('host.distance.scalar')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# compute 3-D distances along the principal (major, intermediate, minor) axes\n",
+    "# compute 3-D distances aligned with the principal (major, intermediate, minor) axes\n",
     "\n",
     "part['star'].prop('host.distance.principal')"
    ]
@@ -437,20 +481,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# compute 2-D distances along the major axes (major + intermediate) and minor axis [kpc physical]\n",
-    "# first value is along the major axes (positive definite)\n",
-    "# second value is vertical height wrt the disk (signed)\n",
+    "# compute 3-D distances aligned with the principal axes in cylindrical coordinates\n",
+    "# first value is along the major axes (R, positive definite)\n",
+    "# second value is vertical height wrt the disk (Z, signed)\n",
+    "# third value is angle (phi, 0 to 2 * pi)\n",
     "\n",
-    "part['star'].prop('host.distance.principal.2d')"
+    "part['star'].prop('host.distance.principal.cylindrical')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# same for velocity\n",
@@ -462,18 +511,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# compute 1-D velocity [km / s]\n",
     "\n",
-    "part['star'].prop('host.velocity.1d')"
+    "part['star'].prop('host.velocity.scalar')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# compute 3-D velocity along the principal (major, intermediate, minor) axes [km / s]\n",
@@ -484,14 +537,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# compute 2-D velocity along the major axes (major + intermediate) and minor axis\n",
     "# first value is along the major axes (positive definite)\n",
     "# second value is vertical velocity wrt the disk (signed)\n",
     "\n",
-    "part['star'].prop('host.velocity.principal.2d')"
+    "part['star'].prop('host.velocity.principal.cylindrical')"
    ]
   },
   {
@@ -518,7 +573,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# first, read catalog of star particles at z = 0\n",
@@ -643,7 +700,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# alternately, read formation distances at the same time read snapshot itself\n",
@@ -656,10 +715,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# total (scalar) distance at formation, wrt host galaxy [kpc physical]\n",
+    "# 3-D distance at formation, aligned with the principal axes of the host galaxy at that time [kpc physical]\n",
+    "# principal axes defined according to all star particles within the host galaxy, independently at each snapshot\n",
+    "# distance along dimension 0 is aligned with the major axis\n",
+    "# distance along dimension 1 is algined with the intermediate axis\n",
+    "# distance along dimension 2 is aligned with the minor (Z) axis\n",
     "\n",
     "part_at_z0['star']['form.host.distance']"
    ]
@@ -667,35 +732,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# 3-D distance vector at formation, wrt host galaxy [kpc physical]\n",
-    "# these distances are aligned with the principal axes of the host galaxy,\n",
-    "# principal axes defined according to all star particles within the host galaxy, independently at each snapshot\n",
-    "# distance along dimension 0 is aligned with the major axis\n",
-    "# distance along dimension 1 is algined with the intermediate axis\n",
-    "# distance along dimension 2 is aligned with the minor (Z) axis\n",
-    "\n",
-    "part_at_z0['star']['form.host.distance.3d']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 2-D array of scalar (absolute) distance and (signed) vertical height wrt the disk [kpc physical]\n",
+    "# total scalar (absolute) distance wrt the host galaxy at formation [kpc physical]\n",
     "# this is a derived quantity, so need to call via .prop()\n",
     "\n",
-    "part_at_z0['star'].prop('form.host.distance.2d')"
+    "part_at_z0['star'].prop('form.host.distance.scalar')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# 3-D array of formation distance wrt the host galaxy in cylindrical coordinates [kpc physical]\n",
+    "\n",
+    "part_at_z0['star'].prop('form.host.distance.cylindrical')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# these value look more reasonable is restrict to star particles that formed within the host galaxy\n",
@@ -703,7 +769,7 @@
     "# select particles formed at d = 0 - 8 kpc physical\n",
     "part_indices = ut.array.get_indices(part_at_z0['star']['form.host.distance'], [0, 8])\n",
     "\n",
-    "part_at_z0['star'].prop('form.host.distance.2d', part_indices)"
+    "part_at_z0['star'].prop('form.host.distance.cylindrical', part_indices)"
    ]
   },
   {
@@ -744,7 +810,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# using this binning scheme,\n",
@@ -757,7 +825,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# in principle, you can supply a list of multiple species, and it will compute profiles for each\n",
@@ -769,7 +839,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# the quantities that it stores in each bin\n",
@@ -795,7 +867,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# set rotation = True to force it to compute profiles along the principal axes (assuming that you read them in)\n",
@@ -808,7 +882,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# similarly, do this to compute profiles along Z\n",
@@ -823,7 +899,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# using the same binning scheme\n",
@@ -838,22 +916,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# the quantities that it stores in each bin\n",
     "\n",
     "pro['star'].keys()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
