--- a/gizmo_tutorial.ipynb
+++ b/gizmo_tutorial.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, move within a simulation directory, which contains the directory 'output/' that contains snapshot files, and a file 'snapshot_times.txt' that lists all snapshot scale-factors/redshifts/times in the simulation and their corresponding file index number."
+    "First, move within a simulation directory. This directory should contains the sub-directory 'output/' that contains snapshot files, and a file 'snapshot_times.txt' that lists all snapshot scale-factors/redshifts/times in the simulation and their corresponding file index number."
    ]
   },
   {
@@ -17,23 +17,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#import gizmo_analysis as gizmo\n",
-    "import gizmo  # I happen to save my 'gizmo_analysis' directory as 'gizmo', but do as you prefer.\n",
-    "\n",
+    "import gizmo_analysis as gizmo\n",
     "import utilities as ut"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# you can access the files as named or use the aliases in __init__.py to keep it shorter \n",
@@ -53,12 +47,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# read star and dark matter particles at z = 0\n",
+    "# read star and dark-matter particles at z = 0\n",
     "\n",
     "part = gizmo.io.Read.read_snapshots(['star', 'dark'], 'redshift', 0)"
    ]
@@ -66,9 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# alternately, read all particle species at z = 0\n",
@@ -79,9 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# this tutorial assumes that you are in the root directory of a simulation, \n",
@@ -93,9 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# each particle species is stored as its own dictionary\n",
@@ -107,9 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# properties of star particles are stored as dictionary\n",
@@ -120,9 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# properties of dark matter particles are stored as dictionary\n",
@@ -140,9 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 3-D position of star particles (particle.number x dimension.number array) [Mpc comoving]\n",
@@ -153,9 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 3-D velocity of star particles (particle_number x dimension_number array) [km/s physical]\n",
@@ -166,9 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# mass of star particles [M_sun]\n",
@@ -179,9 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# formation scale-factor of star particles\n",
@@ -192,9 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# use .prop() to compute derived quantities,\n",
@@ -207,9 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# similarly, get the age of a star particle (the lookback time to when it formed) [Gyr]\n",
@@ -227,9 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 'metallicities' are stored in the catalog as *mass fractions*\n",
@@ -243,9 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# get individual elements by their index\n",
@@ -260,9 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# alternately use .prop() to compute derived quantities,\n",
@@ -278,13 +242,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# also use .prop() to compute metallicity [Z/H]\n",
-    "# for example, iron metallicity [Fe/H] :=\n",
+    "# for example, iron abundance [Fe/H] :=\n",
     "#   log10((mass_iron / mass_hydrogen)_particle / (mass_iron / mass_hydrogen)_sun)\n",
     "# my pipeline assumes solar abundances from Asplund et al 2009\n",
     "\n",
@@ -295,9 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# also use .prop() to compute simple arithmetic combinations, such as [Mg/Fe]\n",
@@ -308,9 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# refer to ut.basic.constants for assumed solar values (Asplund et al 2009) and other constants\n",
@@ -328,9 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# dictionary of useful information about the simulation\n",
@@ -341,9 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# dictionary of information about this snapshot's index, scale-factor, redshift, time, lookback-time\n",
@@ -354,9 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# dictionary class of arrays about *all* snapshots that were saved for the simulation\n",
@@ -368,9 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# dictionary class of cosmological parameters, with function for cosmological conversions\n",
@@ -381,9 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# position [kpc comoving] and velocity [km/s physical] of the center of the host galaxy\n",
@@ -415,9 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# can compute and assign principal axes (moment of inertia tensor) of stars during read in as below\n",
@@ -428,9 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# moment of inertia tensor is stored similar to center_position\n",
@@ -441,13 +385,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# now can compute different types of distances of star particles from center of main galaxy\n",
-    "# compute 3-D distance from main galaxy center along simulation's default x,y,z axes [kpc physical]\n",
+    "# compute 3-D distance from primary galaxy center along simulation's default x,y,z axes [kpc physical]\n",
     "\n",
     "part['star'].prop('host.distance')"
    ]
@@ -455,25 +397,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# compute total scalar distance\n",
+    "# compute total (scalar) distance\n",
     "\n",
-    "part['star'].prop('host.distance.scalar')"
+    "part['star'].prop('host.distance.total')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# compute 3-D distances aligned with the principal (major, intermediate, minor) axes\n",
+    "# compute 3-D distance aligned with the principal (major, intermediate, minor) axes\n",
     "\n",
     "part['star'].prop('host.distance.principal')"
    ]
@@ -481,9 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# compute 3-D distances aligned with the principal axes in cylindrical coordinates\n",
@@ -497,9 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# same for velocity\n",
@@ -511,22 +445,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# compute 1-D velocity [km / s]\n",
     "\n",
-    "part['star'].prop('host.velocity.scalar')"
+    "part['star'].prop('host.velocity.total')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# compute 3-D velocity along the principal (major, intermediate, minor) axes [km / s]\n",
@@ -537,9 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# compute 2-D velocity along the major axes (major + intermediate) and minor axis\n",
@@ -560,22 +488,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For some simulations, I generated pre-compiled HDF5 files to help with particle tracking. These are stored in the directory 'track/' (if present). The code that generates and reads these files is in gizmo_track.py."
+    "Some simulations have pre-compiled HDF5 files to help with particle tracking. These are stored in the directory 'track/' (if present). The code that generates and reads these files is in gizmo_track.py."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "star\\_indices\\_\\*.hdf5 files store, for each star particles at z = 0, a pointer to where it was in the catalog at each previous snapshot (replace * with snapshot index). This makes it easy to quickly get the properties of a given star particle at any previous snapshot. These pointers are stored in an HDF5 file, one for each previous snapshot."
+    "star\\_indices\\_*.hdf5 files store, for each star particles at z = 0, a pointer to where it was in the catalog at each previous snapshot (replace * with snapshot index). This makes it easy to quickly get the properties of a given star particle at any previous snapshot. These pointers are stored in an HDF5 file, one for each previous snapshot."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# first, read catalog of star particles at z = 0\n",
@@ -586,9 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# say that you want to find out what they were doing at z = 1\n",
@@ -600,9 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# use the function within gizmo_track.py to read star index pointers associated with the catalog z = 1\n",
@@ -613,9 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# pointers are stored via numpy array appended to particle dictionary at the relevant snapshot\n",
@@ -627,9 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# so, say that you have a list of the indices of star particles of interest at z = 0\n",
@@ -640,9 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# their positions at z = 0\n",
@@ -653,9 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# get their indices in the catalog at z = 1\n",
@@ -667,9 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# now you easily can get any property of interest at z = 1, for example, positions\n",
@@ -681,15 +593,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Another useful file: star\\_form\\_host\\_distance\\_600.hdf5 stores, for each star particle at z = 0, its distance at the first snapshot after it formed (formation distance) wrt to the main host galaxy, in kpc physical. This file includes both total (scalar) distance and full 3-D vector distance."
+    "Another useful file: star\\_form\\_host\\_distance\\_600.hdf5 stores, for each star particle at z = 0, its 3-D distance at the first snapshot after it formed (formation distance) wrt to the main host galaxy, in [kpc physical]. These distances are aligned with the major, intermediate, minor axes of the stellar disk (as defined via its moment of inertia tensor) at that snapshot."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# use the function within gizmo_track.py to read this file and assign values directly to the catalog at z = 0\n",
@@ -700,24 +610,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# alternately, read formation distances at the same time read snapshot itself\n",
     "# (as with principal axes)\n",
     "\n",
     "part_at_z0 = gizmo.io.Read.read_snapshots(\n",
-    "    ['star'], 'redshift', 0, assign_principal_axes=True, assign_form_host_distance=True)"
+    "    ['star'], 'redshift', 0, assign_principal_axes=True, assign_formation_coordinates=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 3-D distance at formation, aligned with the principal axes of the host galaxy at that time [kpc physical]\n",
@@ -732,23 +638,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# total scalar (absolute) distance wrt the host galaxy at formation [kpc physical]\n",
     "# this is a derived quantity, so need to call via .prop()\n",
     "\n",
-    "part_at_z0['star'].prop('form.host.distance.scalar')"
+    "part_at_z0['star'].prop('form.host.distance.total')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 3-D array of formation distance wrt the host galaxy in cylindrical coordinates [kpc physical]\n",
@@ -759,9 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# these value look more reasonable is restrict to star particles that formed within the host galaxy\n",
@@ -793,9 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# first, initiate an instance of SpeciesProfileClass\n",
@@ -810,9 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# using this binning scheme,\n",
@@ -825,9 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# in principle, you can supply a list of multiple species, and it will compute profiles for each\n",
@@ -839,9 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# the quantities that it stores in each bin\n",
@@ -852,9 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# alternately, you may want to compute profiles along a disks R or Z axes\n",
@@ -867,9 +757,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# set rotation = True to force it to compute profiles along the principal axes (assuming that you read them in)\n",
@@ -882,9 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# similarly, do this to compute profiles along Z\n",
@@ -899,9 +785,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# using the same binning scheme\n",
@@ -916,9 +800,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# the quantities that it stores in each bin\n",
@@ -944,7 +826,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
